option java_package = "org.apache.hadoop.hdfs.protocol.proto";
option java_outer_classname = "ClientNamenodeProtocolProtos";
option java_generic_services = true;
option java_generate_equals_and_hash = true;
option py_generic_services = true;
package hadoop.hdfs;

import "hdfs.proto";

message MkdirsRequestProto {
  required string src = 1;
  required FsPermissionProto masked = 2;
  required bool createParent = 3;
}

message MkdirsResponseProto {
    required bool result = 1;
}

message DeleteRequestProto {
  required string src = 1;
  required bool recursive = 2;
}

message DeleteResponseProto {
    required bool result = 1;
}

message CreateRequestProto {
  required string src = 1;
  required FsPermissionProto masked = 2;
  required string clientName = 3;
  required uint32 createFlag = 4;
  required bool createParent = 5;
  required uint32 replication = 6;
  required uint64 blockSize = 7;
}

message CreateResponseProto {
  optional HdfsFileStatusProto fs = 1;
}

message CompleteRequestProto {
  required string src = 1;
  required string clientName = 2;
  optional ExtendedBlockProto last = 3;
  optional uint64 fileId = 4 [default = 0];
}

message CompleteResponseProto {
  required bool result = 1;
}

message GetFileInfoRequestProto {
  required string src = 1;
}

message GetFileInfoResponseProto {
  optional HdfsFileStatusProto fs = 1;
}

message GetServerDefaultsRequestProto {
}

message GetServerDefaultsResponseProto {
  required FsServerDefaultsProto serverDefaults = 1;
}

message GetBlockLocationsRequestProto {
  required string src = 1;
  required uint64 offset = 2;
  required uint64 length = 3;
}

message GetBlockLocationsResponseProto {
  optional LocatedBlocksProto locations = 1;
}

message AddBlockRequestProto {
  required string src = 1;
  required string clientName = 2;
  optional ExtendedBlockProto previous = 3;
  repeated DatanodeInfoProto excludeNodes = 4;
  optional uint64 fileId = 5 [default = 0];
  repeated string favoredNodes = 6;
}

message AddBlockResponseProto {
  required LocatedBlockProto block = 1;
}
