option java_package = "org.apache.hadoop.hdfs.protocol.proto";
option java_outer_classname = "HdfsProtos";
option java_generate_equals_and_hash = true;
package hadoop.hdfs;

message FsPermissionProto {
  required uint32 perm = 1;
}

message ExtendedBlockProto {
  required string poolId = 1;
  required uint64 blockId = 2;
  required uint64 generationStamp = 3;
  optional uint64 numBytes = 4 [default = 0];
}
